--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      DOCKER_IMAGE_PATH: nstwf/crowdsec-dahboard
+      DOCKER_IMAGE_PATH: nstwf/crowdsec-dashboard
 
     services:
       docker:
